# GMM

./: CMakeLists.txt  GMM.cpp  Kmeans.cpp  Kmeans.h  Matrix.cpp  Matrix.h  main.cpp  package.xml
include/gmm/: GMM.h
src/: GMM.cpp  Kmeans.cpp  Matrix.cpp  main.cpp
